excalidraw-room/kustomization/base/deploy-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: excalidraw-frontend
  name: excalidraw-frontend
spec:
  selector:
    matchLabels:
      app: excalidraw-frontend
  template:
    metadata:
      labels:
        app: excalidraw-frontend
    spec:
      containers:
      - image: alswl/excalidraw:v0.17.0-fork-b2
        name: frontend
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
