excalidraw-room/kustomization/base/deploy-storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: excalidraw-storage
  name: excalidraw-storage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw-storage
  template:
    metadata:
      labels:
        app: excalidraw-storage
    spec:
      containers:
      - image: docker.io/alswl/excalidraw-storage-backend:v2023.11.11
        name: storage
        ports:
        - containerPort: 8081
          name: http
          protocol: TCP
